--- a/Ros_Ros2/main.tex
+++ b/Ros_Ros2/main.tex
@@ -91,7 +91,7 @@
 	\setstretch{1} % 1.5 línea de interlineado antes esta a 1 para la portada
 	%\input{preambulos/preliminaresconagradecimientos}
 	%\input{preambulos/1_declaracion_originalidad}
-	%\input{preambulos/2_resumen}
+	\input{preambulos/2_resumen}
 	%\input{preambulos/3_extended_abstract}
 	
 	%\setstretch{1.0} % 1.0 línea de interlineado para los indices
@@ -129,9 +129,9 @@
 	%%%%
 	% CONTENIDO. BIBLIOGRAFÍA.
 	%%%%
-	\nocite{*} %incluye TODOS los documentos de la base de datos bibliográfica sean o no citados en el texto
-	\bibliographystyle{unsrtnat}
-	\bibliography{bibliografia/bibliografia} % Archivo que contiene la bibliografía
+	%\nocite{*} %incluye TODOS los documentos de la base de datos bibliográfica sean o no citados en el texto
+	%\bibliographystyle{unsrtnat}
+	%\bibliography{bibliografia/bibliografia} % Archivo que contiene la bibliografía
 	
 	
 	%%%%
