--- a/Ros_Ros2/preambulos/2_resumen.tex
+++ b/Ros_Ros2/preambulos/2_resumen.tex
@@ -13,21 +13,12 @@
 
 \todo[inline]{}
 	
-Este resumen se ha hecho para facilitar el estudio de la asignatura y dar una buena base para hacer el examen de teoria y esta divido en nueve temas:
+ROS (Robot Operating System) es un set de algoritmos de código abierto, drivers, librerías y herramientas diseñadas y desarrolladas para la creación de controladores y aplicaciones para robots.
 
-\begin{itemize}
-    \item Tema 1: Introducción
-    \item Tema 2: La Imagen Digital
-    \item Ejercicios del tema 1 y 2
-    \item Tema 3: Preprocesado de Imágenes
-    \item Tema 4: Filtros - Procesamiento local
-    \item Ejercicios del tema 3 y 4
-    \item Tema 5: Puntos Característicos
-    \item Tema 6: Segmentación Basada en Regiones
-    \item Tema 7: Segmentación Basada en Bordes
-    \item Tema 8: Evaluación de la Segmentación
-    \item Tema 9: Reconocimiento  de Patrones
-\end{itemize}    
+El objetivo de este trabajo es presentar una imagen general de ROS.
+
+
+  
 
 
 
