--- a/Ros_Ros2/main.tex
+++ b/Ros_Ros2/main.tex
@@ -88,13 +88,13 @@
 	
 	%%%%% PREAMBULO
 	% Incluye el .tex que contiene el preámbulo, agradecimientos y dedicatorias.
-	\setstretch{1} % 1.5 línea de interlineado antes esta a 1 para la portada
+	\setstretch{1.5} % 1.5 línea de interlineado antes esta a 1 para la portada
 	%\input{preambulos/preliminaresconagradecimientos}
 	%\input{preambulos/1_declaracion_originalidad}
 	\input{preambulos/2_resumen}
 	%\input{preambulos/3_extended_abstract}
 	
-	%\setstretch{1.0} % 1.0 línea de interlineado para los indices
+	\setstretch{1.5} % 1.0 línea de interlineado para los indices
 	% Incluye después del archivo anterior el indice y lista de figuras, tablas y códigos.
 
 	\tableofcontents     	% Índice
