--- a/Ros_Ros2/preambulos/2_resumen.tex
+++ b/Ros_Ros2/preambulos/2_resumen.tex
@@ -15,7 +15,7 @@
 	
 ROS (Robot Operating System) es un set de algoritmos de código abierto, drivers, librerías y herramientas diseñadas y desarrolladas para la creación de controladores y aplicaciones para robots.
 
-El objetivo de este trabajo es presentar una imagen general de ROS.
+El objetivo de este trabajo es ofrecer una visión generalizada de que es ROS, donde se comenta un poco de su historia, que es ROS, su objetivo y además un poco de su evolución.
 
 
   
